--- a/Project/views/listening.ejs
+++ b/Project/views/listening.ejs
@@ -10,16 +10,16 @@
 
   <title>English Self-Study Supporter </title>
 
-    <!-- Bootstrap -->
-    <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="../../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="../../vendors/nprogress/nprogress.css" rel="stylesheet">
-    <!-- iCheck -->
-    <link href="../../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link href="../../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <!-- NProgress -->
+  <link href="../../vendors/nprogress/nprogress.css" rel="stylesheet">
+  <!-- iCheck -->
+  <link href="../../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
-    <!-- Custom Theme Style -->
+  <!-- Custom Theme Style -->
   <link href="../../build/css/custom.min.css" rel="stylesheet">
 </head>
 
@@ -146,7 +146,7 @@
                 <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                   <li>
                     <a>
-                      <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                      <span class="image"><img src="../../images/img.jpg" alt="Profile Image" /></span>
                       <span>
                         <span>John Smith</span>
                         <span class="time">3 mins ago</span>
@@ -158,7 +158,7 @@
                   </li>
                   <li>
                     <a>
-                      <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                      <span class="image"><img src="../../images/img.jpg" alt="Profile Image" /></span>
                       <span>
                         <span>John Smith</span>
                         <span class="time">3 mins ago</span>
@@ -170,7 +170,7 @@
                   </li>
                   <li>
                     <a>
-                      <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                      <span class="image"><img src="../../images/img.jpg" alt="Profile Image" /></span>
                       <span>
                         <span>John Smith</span>
                         <span class="time">3 mins ago</span>
@@ -182,7 +182,7 @@
                   </li>
                   <li>
                     <a>
-                      <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                      <span class="image"><img src="../../images/img.jpg" alt="Profile Image" /></span>
                       <span>
                         <span>John Smith</span>
                         <span class="time">3 mins ago</span>
@@ -233,9 +233,9 @@
                       </label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
                         <select id="part" class="form-control" required>
-                          <option value="writing" selected>Writing</option>
+                          <option value="writing" >Writing</option>
                           <option value="speaking">Speaking</option>
-                          <option value="listening">Listening</option>
+                          <option value="listening" selected>Listening</option>
                           <option value="reading">Reading</option>
                         </select>
                       </div>
@@ -251,7 +251,7 @@
                     <div class="ln_solid"></div>
                     <div class="form-group">
                       <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-4">
-                        <button class="btn btn-primary" type="button"><a href="../../quanlydethi" style="color:white ">Cancel</a> </button>
+                        <button class="btn btn-primary" type="button"><a href="." style="color:white ">Cancel</a> </button>
                         <button class="btn btn-primary" type="reset"><a style="color:white ">Reset</a></button>
                         <button type="submit" class="btn btn-success"><a style="color:white ">Save and back</a> </button>
                       </div>
@@ -280,7 +280,7 @@
     document.getElementById("part").addEventListener("change", student_timetable_function); 
     function student_timetable_function() {
         var x = document.getElementById("part");
-        var sUrl = "themmoidethi/" + x.value ; 
+        var sUrl = "/quanlydethi/themmoidethi/" + x.value ; 
         window.location = sUrl ; 
     }
 </script>
