--- a/Project/views/page_404.ejs
+++ b/Project/views/page_404.ejs
@@ -45,6 +45,9 @@
               <h2>Sorry but we couldn't find this page</h2>
               <p>This page you are looking for does not exist <a href="#">Report this?</a>
               </p>
+              <% if (message!=undefined) { %>
+              <p> <%=message%> </p>
+              <%}%>
               <div class="mid_center">
                 <h3>Search</h3>
                 <form>
