--- a/Project/views/quanlydethi.ejs
+++ b/Project/views/quanlydethi.ejs
@@ -46,7 +46,7 @@
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
-                <h2> Vũ Lê Hoàng </h2>
+                <h2> <%= data.firstname + " " + data.lastname %> </h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -126,7 +126,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/img.jpg" alt="">Vũ Lê Hoàng
+                    <img src="../images/img.jpg" alt=""> <%= data.firstname + " " + data.lastname %>
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -265,63 +265,54 @@
                       <thead>
                         <tr>
                           <th style="width: 1%" class="text-center" >#</th>
-                          <th style="width: 10%" class="text-center"> Id </th>
-                          <th style="width: 15%" class="text-center"> Type </th>
+                          <th style="width: 10%" class="text-center"> Name </th>
+                          <th style="width: 10%" class="text-center"> Type </th>
+                          <th style="width: 15%" class="text-center"> Author </th>
                           <th style="width: 20%" class="text-center"> Actions </th>
                         </tr>
                       </thead>
                       <tbody>
-        
-        
+                        <% writinglist.forEach((part) => { %>
                         <tr>
-                          <td >1</td>
-                          <td > Cambride 1 </td>
-                          <td > Reading </td>
-                          <td >
-                            <a href="quanlydethi/chitietdethi" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
-                            <a href="quanlydethi/capnhatdethi" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
-                          </td>
-                        </tr>
-
-                        <tr>
-                          <td>1</td>
-                          <td> Cambride 1 </td>
-                          <td> Listening </td>
-                          <td>
-                            <a href="quanlydethi/chitietdethi" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
-                            <a href="quanlydethi/capnhatdethi" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
-                          </td>
-                        </tr>
-
-                        <tr>
-                          <td>1</td>
-                          <td> Cambride 1 </td>
+                          <td> <a href="quanlydethi/writing/<%=part._id%>"> <%=part._id%></a> </td>
+                          <td > <%=part.name%> </td>
                           <td> Writing </td>
-                          <td>
-                            <a href="quanlydethi/chitietdethi" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
-                            <a href="quanlydethi/capnhatdethi" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
+                          <td > <%=part.author_id%> </td>
+                          <td >
+                            <a href="quanlydethi/writing/<%=part._id%>" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
+                            <a href="quanlydethi/writing/<%=part._id%>/edit" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
+                            <a href="quanlydethi/writing/<%=part._id%>/delete" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
                           </td>
                         </tr>
+                      <%})%>
 
+                      <% speakinglist.forEach((part) => { %>
                         <tr>
-                          <td>1</td>
-                          <td> Cambride 1 </td>
+                          <td> <a href="quanlydethi/speaking/<%=part._id%>"> <%=part._id%></a> </td>
+                          <td > <%=part.name%> </td>
                           <td> Speaking </td>
-                          <td>
-                            <a href="quanlydethi/chitietdethi" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
-                            <a href="quanlydethi/capnhatdethi" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
-                            <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
+                          <td > <%=part.author_id%> </td>
+                          <td >
+                            <a href="quanlydethi/speaking/<%=part._id%>" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
+                            <a href="quanlydethi/speaking/<%=part._id%>/edit" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
+                            <a href="quanlydethi/speaking/<%=part._id%>/delete" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
                           </td>
                         </tr>
+                      <%})%>
 
-
-        
-                        
-        
-        
+                      <% readinglist.forEach((part) => { %>
+                        <tr>
+                          <td> <a href="quanlydethi/reading/<%=part._id%>"> <%=part._id%></a> </td>
+                          <td > <%=part.name%> </td>
+                          <td> Reading </td>
+                          <td > <%=part.author_id%> </td>
+                          <td >
+                            <a href="quanlydethi/reading/<%=part._id%>" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> </a>
+                            <a href="quanlydethi/reading/<%=part._id%>/edit" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> </a>
+                            <a href="quanlydethi/reading/<%=part._id%>/delete" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> </a>
+                          </td>
+                        </tr>
+                      <%})%>
                       </tbody>
                     </table>
                     <!-- end project list -->
