--- a/Project/views/thietlapdanhsachhoc.ejs
+++ b/Project/views/thietlapdanhsachhoc.ejs
@@ -10,11 +10,22 @@
               <div class="title_right">
                 <div class="col-md-9 col-sm-12 col-xs-12 form-group pull-center top_search">
                   <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
+                    <input type="text" class="form-control" id="search_query" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">Search !</button>
+                    </span>
+                  </div>
+                  <%if(typeof query_list !== "undefined"){%>
+                  <%query_list.forEach((q) => {%>
+                  <div class="input-group">
+                    <input type="text" class="form-control" value="<%=q.word%>" disabled>
                     <span class="input-group-btn">
                       <button class="btn btn-default" type="button">Thêm !</button>
                     </span>
                   </div>
+                  <%})%>
+                  <%}%>
+                  
                 </div>
               </div>
             </div>
@@ -51,52 +62,31 @@
                         <tr>
                           <th style="width: 1%">#</th>
                           <th style="width: 10%">Từ </th>
-                          <th style="width: 20%">Giải thích</th>
                           <th style="width: 10%">Nghĩa</th>
                           <th style="width: 15%">Từ đồng nghĩa</th>
                           <th style="width: 25%">Ví dụ</th>
                         </tr>
                       </thead>
                       <tbody>
-                        
-                        
+                      <%var vlist =data.list_vocab%>
+                      <%vlist.forEach( (vocab) =>{ %>
                         <tr>
-                          <td>1</td>
+                          <td><%=vocab._id%></td>
                           <td>
-                              I
+                            <%=vocab.word%>
                           </td>
                           <td>
-                            Used by a speaker to refer to himself or herself.
+                            <%=vocab.meaning%>
                           </td>
                           <td>
-                            Tôi
+                            <%=vocab.synonyms%>
                           </td>
                           <td>
-                            -------
-                          </td>
-                          <td>
-                              I love you  
+                              <%=vocab.examples%>
                           </td>
                         </tr>
+                      <% }) %>
                         
-                        <tr>
-                          <td>2</td>
-                          <td>
-                              You
-                          </td>
-                          <td>
-                            Used by a speaker to refer to the person that he or she are talking to.
-                          </td>
-                          <td>
-                            Bạn
-                          </td>
-                          <td>
-                            -------
-                          </td>
-                          <td>
-                              I love you  
-                          </td>
-                        </tr>
 
                         
                       </tbody>
@@ -110,6 +100,14 @@
             </div>
           </div>
         </div>
+        <script>
+          document.getElementById("search_query").addEventListener("change", queryfunction); 
+          function queryfunction() {
+            var x = document.getElementById("search_query");
+            var sUrl = "/thietlapdanhsachhoc/" + x.value ; 
+            window.location = sUrl ; 
+          }
+        </script>
         <!-- /page content -->
 
         <!-- footer content -->
