--- a/Project/views/template/main_top_navigation.ejs
+++ b/Project/views/template/main_top_navigation.ejs
@@ -42,7 +42,7 @@
                                     <li><a href="kiemtratongthe">Kiểm tra tổng thể</a></li>
                                   </ul>
                                 </li>
-                                <li><a href="/diemdanh"><i class="fa fa-check"></i> Điểm danh hàng ngày </a></li>
+                                <li><a href="/checkin"><i class="fa fa-check"></i> Điểm danh hàng ngày </a></li>
                                 <li><a href="/forum"><i class="fa fa-comments-o"></i> Forum </a></li>
                                 <!--  <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
