--- a/Project/views/chitietthanhvien.ejs
+++ b/Project/views/chitietthanhvien.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header2 %>
-<% include ./template/main_top_navigation2 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
 
       <!-- page content -->
       <div class="right_col" role="main">
