--- a/Project/views/profile.ejs
+++ b/Project/views/profile.ejs
@@ -89,12 +89,12 @@
                     </label>
                     <label class="control-label col-md-6 col-sm-3 col-xs-12" for="first_name">
                       <center>
-                        <% if(data.is_admin ) {%>  
-                          Yes 
-                        <% } else { %>
-                          No 
-                        <% } %>
-                      </center>
+                        <% if(data.is_admin ) {%>  Yes <% } else { %>No <% } %> </center>
+                          
+                          
+                        
+                          
+                      
                     </label>
                   </div>
 
