--- a/Project/views/reading.ejs
+++ b/Project/views/reading.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header4 %>
-<% include ./template/main_top_navigation4 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
       <!-- /top navigation -->
 
       <!-- page content -->
@@ -87,4 +87,4 @@
             window.location = sUrl ; 
         }
     </script>
-<% include ./template/main_footer4 %>
+<% include ./template/main_footer %>
