--- a/Project/views/writingdetail.ejs
+++ b/Project/views/writingdetail.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header3 %>
-<% include ./template/main_top_navigation3 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
 
       <!-- page content -->
       <div class="right_col" role="main">
@@ -85,4 +85,4 @@
       <!-- /page content -->
 
       <!-- footer content -->
-<% include ./template/main_footer3 %>
+<% include ./template/main_footer %>
