--- a/Project/views/capnhatdethi.ejs
+++ b/Project/views/capnhatdethi.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header4 %>
-<% include ./template/main_top_navigation4 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
       <!-- /top navigation -->
 
       <!-- page content -->
@@ -77,4 +77,4 @@
       <!-- /page content -->
 
       <!-- footer content -->
-<% include ./template/main_footer4 %>
+<% include ./template/main_footer %>
