--- a/Project/views/newpost.ejs
+++ b/Project/views/newpost.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header2 %>
-<% include ./template/main_top_navigation2 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
       <!-- page content -->
       <div class="right_col" role="main">
         <!-- top tiles -->
@@ -45,4 +45,4 @@
       <!-- /page content -->
 
       <!-- footer content -->
-<% include ./template/main_footer2 %>
+<% include ./template/main_footer %>
