--- a/Project/views/speakingupdate.ejs
+++ b/Project/views/speakingupdate.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header4 %>
-<% include ./template/main_top_navigation4 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
       <!-- /top navigation -->
 
       <!-- page content -->
@@ -80,4 +80,4 @@
       <!-- /page content -->
 
       <!-- footer content -->
-<% include ./template/main_footer4 %>
+<% include ./template/main_footer %>
