--- a/Project/views/themmoithanhvien.ejs
+++ b/Project/views/themmoithanhvien.ejs
@@ -1,5 +1,5 @@
-<% include ./template/main_header2 %>
-<% include ./template/main_top_navigation2 %>
+<% include ./template/main_header %>
+<% include ./template/main_top_navigation %>
       <!-- page content -->
       <div class="right_col" role="main">
         <div class="">
@@ -114,4 +114,4 @@
       <!-- /page content -->
 
       <!-- footer content -->
-<% include ./template/main_footer2 %>
+<% include ./template/main_footer %>
