--- a/Project/views/diemdanh.ejs
+++ b/Project/views/diemdanh.ejs
@@ -227,7 +227,7 @@
       
         <div class="row">
           <div class="col-md-12 col-sm-12 col-xs-12" style="color:red; text-align:center">
-            <h3> Điểm danh hàng ngày
+            <h3> asdasdasd
       
             </h3>
           </div>
